--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -25,35 +27,58 @@
     <section id="home" class="banner">
         <div class="banner-content">
             <h2>Welcome to My Web Portfolio</h2>
-            <p>Explore my projects and feel free to reach out for collaborations.</p>
+            <p>Explore my projects in this website.
+                I am gonna post my web projects to this website, so that you might see, so yah! it is My portfolio Web.
+            </p>
             <a href="#projects" class="btn">View Projects</a>
         </div>
     </section>
 
     <section id="projects" class="projects-section">
-        <h2>My Projects</h2>
+        <h2 class="tag">My Projects</h2>
         <div class="projects-grid">
-            <a href="project1.html" class="project-card">
+            <a href="project1/index.html" class="project-card">
                 <h3>1.Video Player</h3>
-                <p>It is just a simple Video player site, Where I have used my Basic skills of CSS, and added some random Memes in The site.</p>
+                <p>It is just a simple Video player site, Where I have used my Basic skills of CSS, and added some
+                    random Memes in The site.</p>
             </a>
-            <a href="project2.html" class="project-card">
+            <a href="project2/index.html" class="project-card">
                 <h3>2. Nature Card</h3>
-                <p>A basic responsive Card that depicts and states some random things about nature, it is not much, but yah! I HAVE put my HARDWORK in it.</p>
+                <p>A basic responsive Card that depicts and states some random things about nature, it is not much, but
+                    yah! I HAVE put my HARDWORK in it.</p>
             </a>
             <!-- Add more project cards as needed -->
         </div>
     </section>
 
     <section id="about" class="about-section">
-        <h2>About Me</h2>
-        <p>Brief introduction about yourself, your skills, and your passion for web development.</p>
+        <h2 class="tag">About Me</h2>
+        <p>I am just a student who is still stuck in his high School, But no worries it is just my last year, After that
+            I shall be free. I am not too much, just trying out NEW things, I am currently learning Web development, But
+            I want to Make my Carrier in Python Programming </p>
+        <p>Following are some of my skills</p>
+        <ul>
+            <li >Rizz</li>
+            <li >Python Programming</li>
+            <li >C language</li>
+            <li >Html & CSS</li>
+            <li >Javascript (sooon)</li>
+
+        </ul>
+        <p>I am not expert in these, but the thing is that i know at the least somthing about These languages.</p>
     </section>
 
     <section id="contact" class="contact-section">
-        <h2>Contact Me</h2>
-        <p>If you'd like to get in touch, here's how you can reach me.</p>
+        <h2 class="tag">Conatact Me</h2>
+        <p>If You are determined tp contact me (which I know for sure that you are not), then following are some social
+            links</p>
+            <ul>
+                <li><a href="alicodes019@gmail.com">Email 1</a></li>
+                <li></li>
+            </ul>
+            
     </section>
 
 </body>
+
 </html>
