--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="banner-content">
             <h2>Welcome to My Web Portfolio</h2>
             <p>Explore my projects in this website.
-                I am gonna post my web projects to this website, so that you might see, so yah! it is My portfolio Web.
+                I am gonna post my web projects to this website, so that you might see those, so yah! it is My portfolio Web.
             </p>
             <a href="#projects" class="btn">View Projects</a>
         </div>
@@ -37,15 +37,13 @@
     <section id="projects" class="projects-section">
         <h2 class="tag">My Projects</h2>
         <div class="projects-grid">
-            <a href="project1/index.html" class="project-card">
-                <h3>1.Video Player</h3>
-                <p>It is just a simple Video player site, Where I have used my Basic skills of CSS, and added some
-                    random Memes in The site.</p>
+            <a href="project1/videoviewer.html" class="project-card">
+                <h3>1. Video Player</h3>
+                <p>It is just a simple Video player site, where I have used my basic skills of CSS and added some random memes to the site.</p>
             </a>
-            <a href="project2/index.html" class="project-card">
+            <a href="project2/nature-card.html" class="project-card">
                 <h3>2. Nature Card</h3>
-                <p>A basic responsive Card that depicts and states some random things about nature, it is not much, but
-                    yah! I HAVE put my HARDWORK in it.</p>
+                <p>A basic responsive card that depicts and states some random things about nature. It is not much, but yah! I HAVE put my HARDWORK in it.</p>
             </a>
             <!-- Add more project cards as needed -->
         </div>
@@ -53,30 +51,24 @@
 
     <section id="about" class="about-section">
         <h2 class="tag">About Me</h2>
-        <p>I am just a student who is still stuck in his high School, But no worries it is just my last year, After that
-            I shall be free. I am not too much, just trying out NEW things, I am currently learning Web development, But
-            I want to Make my Carrier in Python Programming </p>
-        <p>Following are some of my skills</p>
+        <p>I am just a student who is still stuck in high school, but no worries, it is just my last year. After that, I shall be free. I am not too much, just trying out NEW things. I am currently learning web development, but I want to make my career in Python programming.</p>
+        <p>Following are some of my skills:</p>
         <ul>
-            <li >Rizz</li>
-            <li >Python Programming</li>
-            <li >C language</li>
-            <li >Html & CSS</li>
-            <li >Javascript (sooon)</li>
-
+            <li>Rizz</li>
+            <li>Python Programming</li>
+            <li>C Language</li>
+            <li>HTML & CSS</li>
+            <li>JavaScript (soon)</li>
         </ul>
-        <p>I am not expert in these, but the thing is that i know at the least somthing about These languages.</p>
+        <p>I am not an expert in these, but the thing is that I know at least something about these languages.</p>
     </section>
 
     <section id="contact" class="contact-section">
-        <h2 class="tag">Conatact Me</h2>
-        <p>If You are determined tp contact me (which I know for sure that you are not), then following are some social
-            links</p>
-            <ul>
-                <li><a href="alicodes019@gmail.com">Email 1</a></li>
-                <li></li>
-            </ul>
-            
+        <h2 class="tag">Contact Me</h2>
+        <p>If you are determined to contact me (which I know for sure that you are not), then following are some social links:</p>
+        <ul>
+            <li><a href="mailto:alicodes019@gmail.com">Email 1</a></li>
+        </ul>
     </section>
 
 </body>
