--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </section>
 
-    <section id="about" class="about-section">
+    <section id="about" class="about-section col">
         <h2 class="tag">About Me</h2>
         <p>I am just a student who is still stuck in high school, but no worries, it is just my last year. After that, I shall be free. I am not too much, just trying out NEW things. I am currently learning web development, but I want to make my career in Python programming.</p>
         <p>Following are some of my skills:</p>
