--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <div class="banner-content">
             <h2>Welcome to My Web Portfolio</h2>
             <p>Explore my projects in this website.
-                I am gonna post my web projects to this website, so that you might see those, so yah! it is My portfolio Web.
+                I am gonna post my web projects to this website, so that you might see those, so yah! it is My portfolio
+                Web.
             </p>
             <a href="#projects" class="btn">View Projects</a>
         </div>
@@ -39,11 +40,20 @@
         <div class="projects-grid">
             <a href="project1/videoviewer.html" class="project-card">
                 <h3>1. Video Player</h3>
-                <p>It is just a simple Video player site, where I have used my basic skills of CSS and added some random memes to the site.</p>
+                <p>It is just a simple Video player site, where I have used my basic skills of CSS and added some random
+                    memes to the site.</p>
             </a>
             <a href="project2/nature-card.html" class="project-card">
                 <h3>2. Nature Card</h3>
-                <p>A basic responsive card that depicts and states some random things about nature. It is not much, but yah! I HAVE put my HARDWORK in it.</p>
+                <p>A basic responsive card that depicts and states some random things about nature. It is not much, but
+                    yah! I HAVE put my HARDWORK in it.</p>
+            </a>
+            <a href="project3/layout.html" class="project-card">
+                <h3>3. Layout Practice</h3>
+                <p>
+                    IT is the practice of the Exercise, which i Got from Code with Harry, A Great teacher, SO check it
+                    out.
+                </p>
             </a>
             <!-- Add more project cards as needed -->
         </div>
@@ -51,7 +61,9 @@
 
     <section id="about" class="about-section col">
         <h2 class="tag">About Me</h2>
-        <p>I am just a student who is still stuck in high school, but no worries, it is just my last year. After that, I shall be free. I am not too much, just trying out NEW things. I am currently learning web development, but I want to make my career in Python programming.</p>
+        <p>I am just a student who is still stuck in high school, but no worries, it is just my last year. After that, I
+            shall be free. I am not too much, just trying out NEW things. I am currently learning web development, but I
+            want to make my career in Python programming.</p>
         <p>Following are some of my skills:</p>
         <ul>
             <li>Rizz</li>
@@ -65,7 +77,8 @@
 
     <section id="contact" class="contact-section">
         <h2 class="tag">Contact Me</h2>
-        <p>If you are determined to contact me (which I know for sure that you are not), then following are some social links:</p>
+        <p>If you are determined to contact me (which I know for sure that you are not), then following are some social
+            links:</p>
         <ul>
             <li><a href="mailto:alicodes019@gmail.com">Email 1</a></li>
         </ul>
