--- a/project3/layout.html
+++ b/project3/layout.html
@@ -19,28 +19,32 @@
             </ul>
         </nav>
     </header>
+
     <main class="containor">
-        <div class="box1">
+        <section class="box1" data-x="foot">
             <h2>The Benefits of Reading Daily</h2>
-            <p data-x="foot">Reading daily is a powerful habit that can enhance both the mind and the spirit. Regular reading expands
+            <p>Reading daily is a powerful habit that can enhance both the mind and the spirit. Regular
+                reading expands
                 your vocabulary, improves your comprehension skills, and strengthens your ability to concentrate.
                 Whether you're diving into a novel, exploring non-fiction, or browsing articles online, reading
                 stimulates your brain and keeps it active. Additionally, reading allows you to explore different
                 perspectives and cultures, broadening your understanding of the world around you.</p>
-        </div>
-        <div class="box2">
+        </section>
+        <section class="box2" data-x="foot">
             <h2>The Importance of Physical Exercise</h2>
-            <p data-x="foot">Physical exercise is crucial for maintaining a healthy lifestyle. Regular activity helps to strengthen
+            <p>Physical exercise is crucial for maintaining a healthy lifestyle. Regular activity helps to
+                strengthen
                 muscles, improve cardiovascular health, and boost overall energy levels. Whether it's a brisk walk, a
                 workout at the gym, or a yoga session, exercise releases endorphins, which can improve mood and reduce
                 stress. Beyond the physical benefits, exercise also promotes mental well-being, helping to clear the
                 mind and increase focus.</p>
-        </div>
-
+        </section>
     </main>
+
     <figure id="logo">
-        <img src="sun.svg" alt="">
+        <img src="sun.svg" alt="Sun Logo">
     </figure>
+
     <footer class="footer">
         <h1>Thanks for Stopping By!</h1>
         <p>Hey there! 😘 You've just stumbled upon a site crafted by Ali to flaunt some basic CSS design. Nothing too
