--- a/index.html
+++ b/index.html
@@ -35,24 +35,29 @@
         </div>
     </section>
 
-    <section id="projects" class="projects-section">
+    <section id="projects" class="projects-section overflow">
         <h2 class="tag">My Projects</h2>
         <div class="projects-grid">
             <a href="project1/videoviewer.html" class="project-card">
                 <h3>1. Video Player</h3>
-                <p>🎥 Ready for a little eye candy? This sleek video player is packed with memes that'll make you smile and keep you hooked. Dive in and let the fun begin. 😏</p>
+                <p>🎥 Ready for a little eye candy? This sleek video player is packed with memes that'll make you smile
+                    and keep you hooked. Dive in and let the fun begin. 😏</p>
             </a>
             <a href="project2/nature-card.html" class="project-card">
                 <h3>2. Nature Card</h3>
-                <p>🌿 Curious about nature? This card serves up some tantalizing facts with a touch of whimsy. It's a simple delight that’s sure to captivate and intrigue. 🍃😉</p>
+                <p>🌿 Curious about nature? This card serves up some tantalizing facts with a touch of whimsy. It's a
+                    simple delight that’s sure to captivate and intrigue. 🍃😉</p>
             </a>
             <a href="project3/layout.html" class="project-card">
                 <h3>3. Layout Practice</h3>
-                <p>🔨 Dive into my latest layout practice! Inspired by Code with Harry, this exercise is all about turning simple design into something that pops. Check it out and be impressed. 😜💡</p>
+                <p>🔨 Dive into my latest layout practice! Inspired by Code with Harry, this exercise is all about
+                    turning simple design into something that pops. Check it out and be impressed. 😜💡</p>
             </a>
             <a href="project4/memes.html" class="project-card">
                 <h3>4. Meme Land (2.0)</h3>
-                <p>🔥 Ready to Get Naughty? 🔥 Dive into our collection of sizzling memes and cheeky videos that'll make you laugh, blush, and crave more. Enjoy a playful twist on your daily dose of fun—where every scroll is a tease and every click is a thrill. 😏🍑 Let the games begin!</p>
+                <p>🔥 Ready to Get Naughty? 🔥 Dive into our collection of sizzling memes and cheeky videos that'll make
+                    you laugh, blush, and crave more. Enjoy a playful twist on your daily dose of fun—where every scroll
+                    is a tease and every click is a thrill. 😏🍑 Let the games begin!</p>
             </a>
             <!-- Add more project cards as needed -->
         </div>
