--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
                     you laugh, blush, and crave more. Enjoy a playful twist on your daily dose of fun—where every scroll
                     is a tease and every click is a thrill. 😏🍑 Let the games begin!</p>
             </a>
+            <div class="projects-grid">
+                <a href="project5/ultra-text.html" class="project-card">
+                    <h3>UltraEdit Thank You Page Clone</h3>
+                    <p>🎉 Feeling thankful? Step into this stylish clone of the UltraEdit thank you page! Experience a
+                        sleek design that mirrors the original's thank-you vibes with a touch of playful flair. Explore
+                        vibrant visuals, handy download links, and a delightful layout that makes saying 'thanks' look
+                        so good. Click through and enjoy the ride! 😄🚀</p>
+                </a>
+            </div>
+
             <!-- Add more project cards as needed -->
         </div>
     </section>
