project5 - little update

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </a>
             <div class="projects-grid">
                 <a href="project5/ultra-text.html" class="project-card">
-                    <h3>UltraEdit Thank You Page Clone</h3>
+                    <h3>5. UltraEdit Thank You Page Clone</h3>
                     <p>🎉 Feeling thankful? Step into this stylish clone of the UltraEdit thank you page! Experience a
                         sleek design that mirrors the original's thank-you vibes with a touch of playful flair. Explore
                         vibrant visuals, handy download links, and a delightful layout that makes saying 'thanks' look
