--- a/project5/ultra-text.html
+++ b/project5/ultra-text.html
@@ -9,81 +9,143 @@
 </head>
 
 <body>
+    <!-- Navigation Bar -->
     <nav>
         <div class="nav-container">
             <figure id="logo-container">
-                <img id="logo" src="Images/UE-desclogo.webp" alt="...">
+                <img id="logo" src="Images/UE-desclogo.webp" alt="Logo">
             </figure>
-            <div>
-                <ul class="list-items">
-                    <li>Products ^</li>
-                    <li>For Business ^</li>
-                    <li>Resources ^</li>
-                    <li>Support ^</li>
-                    <li>Our company ^</li>
-                </ul>
-            </div>
-            <figure id="lang-containor">
-                <img src="Images/Lang.png" alt="...">
+            <ul class="list-items">
+                <li>Products ^</li>
+                <li>For Business ^</li>
+                <li>Resources ^</li>
+                <li>Support ^</li>
+                <li>Our Company ^</li>
+            </ul>
+            <figure id="lang-container">
+                <img src="Images/Lang.png" alt="Language Options">
             </figure>
         </div>
     </nav>
+
+    <!-- Main Section -->
     <section id="parent-display">
         <div class="box font">
             Download <strong>&nbsp;UltraEdit&nbsp;</strong> for Windows
-
             <figure id="ratings">
-                <img src="Images/Reviews.png" alt="">
+                <img src="Images/Reviews.png" alt="Ratings">
             </figure>
         </div>
-        <div class="text">
+        <p class="text">
             Download and try UltraEdit before you buy it! This download includes the full Windows version of the text
             editor.
-        </div>
+        </p>
         <div class="button">
-            <a href="">Download Mac Or Linux Version</a>
+            <a href="#">Download Mac Or Linux Version</a>
         </div>
     </section>
+
+    <!-- Update Heading -->
     <section class="heading">
         <div class="logo">
-            <img src="Images/UE-logo.png" alt="">
+            <img src="Images/UE-logo.png" alt="UltraEdit Logo">
         </div>
         <div class="text">
             Download UltraEdit <small>v2024.1 (released 2024-08-27) <a
                     href="https://www.ultraedit.com/updates/uehotfix/">| Hotfix information</a></small>
         </div>
     </section>
+
+    <!-- Merch Items -->
+
     <section class="merch-items">
+        <div class="card">
+            <h2 class="language-name">اردو</h2>
+            <p class="language-description">Urdu</p>
+            <a href="https://streamable.com/q8qgvq">Download 64-bit</a>
+            <h3 class="hash-label">SHA256</h3>
+            <p class="hash-code">E4F5G6H7I8J9K0L1M2N3O4P5Q6R7S8T9U0V1W2X3Y4Z5A6B7C8D9E0F1G2H3I</p>
+        </div>
         <div class="card">
             <h2 class="language-name">English</h2>
             <p class="language-description">English</p>
             <a href="https://streamable.com/q8qgvq">Download 64-bit</a>
             <h3 class="hash-label">SHA256</h3>
-            <p class="hash-code">02A753B54430A2E29ECADAEAEBCCC4EAF7B9629FF37E98CEB61C84527CF6A779</p>
+            <p class="hash-code">0B4B5F6F7D2F8B7A3E8B4C9D6A0D7E8F9A1B2C3D4E5F6F7A8B9C0D1E2F3G4H5</p>
         </div>
 
         <div class="card">
-            <h2 class="language-name">Deutsch</h2>
-            <p class="language-description">German</p>
+            <h2 class="language-name">中文</h2>
+            <p class="language-description">Chinese (Simplified)</p>
             <a href="https://streamable.com/q8qgvq">Download 64-bit</a>
             <h3 class="hash-label">SHA256</h3>
-            <p class="hash-code">02A753B54430A2E29ECADAEAEBCCC4EAF7B9629FF37E98CEB61C84527CF6A779</p>
+            <p class="hash-code">7E7D2B8B3A4C5D6F7A8B9C0D1E2F3G4H5I6J7K8L9M0N1O2P3Q4R5S6T7U8V9W0</p>
         </div>
 
         <div class="card">
-            <h2 class="language-name">Italiano</h2>
-            <p class="language-description">Italian</p>
-            <a href="https://streamable.com/q8qgvq">Download 64-bit</a>
-            <h3 class="hash-label">SHA256</h3>
-            <p class="hash-code">9083D4746A147FCA1CFE6FAC17956B9EBA570FFC569E3E1C682A9FAD5D1A54F4</p>
-        </div>
-        <div class="card">
-            <h2 class="language-name">日本</h2>
+            <h2 class="language-name">日本語</h2>
             <p class="language-description">Japanese</p>
             <a href="https://streamable.com/q8qgvq">Download 64-bit</a>
             <h3 class="hash-label">SHA256</h3>
-            <p class="hash-code">9083D4746A147FCA1CFE6FAC17956B9EBA570FFC569E3E1C682A9FAD5D1A54F4</p>
+            <p class="hash-code">8C9D0E1F2A3B4C5D6E7F8G9H0I1J2K3L4M5N6O7P8Q9R0S1T2U3V4W5X6Y7Z8</p>
         </div>
+
+        <div class="card">
+            <h2 class="language-name">한국어</h2>
+            <p class="language-description">Korean</p>
+            <a href="https://streamable.com/q8qgvq">Download 64-bit</a>
+            <h3 class="hash-label">SHA256</h3>
+            <p class="hash-code">6B7C8D9E0F1A2B3C4D5E6F7G8H9I0J1K2L3M4N5O6P7Q8R9S0T1U2V3W4X5Y6Z7</p>
+        </div>
+
+        <div class="card">
+            <h2 class="language-name">Русский</h2>
+            <p class="language-description">Russian</p>
+            <a href="https://streamable.com/q8qgvq">Download 64-bit</a>
+            <h3 class="hash-label">SHA256</h3>
+            <p class="hash-code">4A5B6C7D8E9F0A1B2C3D4E5F6G7H8I9J0K1L2M3N4O5P6Q7R8S9T0U1V2W3X4Y5</p>
+        </div>
+
+        <div class="card">
+            <h2 class="language-name">العربية</h2>
+            <p class="language-description">Arabic</p>
+            <a href="https://streamable.com/q8qgvq">Download 64-bit</a>
+            <h3 class="hash-label">SHA256</h3>
+            <p class="hash-code">9D0E1F2A3B4C5D6E7F8G9H0I1J2K3L4M5Q6R7S8T9U0V1W2X3Y4Z5A6B7C8D9E</p>
+        </div>
+
+        <div class="card">
+            <h2 class="language-name">हिन्दी</h2>
+            <p class="language-description">Hindi</p>
+            <a href="https://streamable.com/q8qgvq">Download 64-bit</a>
+            <h3 class="hash-label">SHA256</h3>
+            <p class="hash-code">A0B1C2D3E4F5G6H7I8J9K0L1M2N3O4P5Q6R7S8T9U0V1W2X3Y4Z5A6B7C8D9E</p>
+        </div>
+
+        <div class="card">
+            <h2 class="language-name">ไทย</h2>
+            <p class="language-description">Thai</p>
+            <a href="https://streamable.com/q8qgvq">Download 64-bit</a>
+            <h3 class="hash-label">SHA256</h3>
+            <p class="hash-code">B1C2D3E4F5G6H7I8J9K0L1M2N3O4P5Q6R7S8T9U0V1W2X3Y4Z5A6B7C8D9E0F</p>
+        </div>
+
+        <div class="card">
+            <h2 class="language-name">தமிழ்</h2>
+            <p class="language-description">Tamil</p>
+            <a href="https://streamable.com/q8qgvq">Download 64-bit</a>
+            <h3 class="hash-label">SHA256</h3>
+            <p class="hash-code">C2D3E4F5G6H7I8J9K0L1M2N3O4P5Q6R7S8T9U0V1W2X3Y4Z5A6B7C8D9E0F1G</p>
+        </div>
+
+        <div class="card">
+            <h2 class="language-name">ελληνικά</h2>
+            <p class="language-description">Greek</p>
+            <a href="https://streamable.com/q8qgvq">Download 64-bit</a>
+            <h3 class="hash-label">SHA256</h3>
+            <p class="hash-code">D3E4F5G6H7I8J9K0L1M2N3O4P5Q6R7S8T9U0V1W2X3Y4Z5A6B7C8D9E0F1G2H</p>
+        </div>
+
         <div class="card">
             <h2 class="language-name">Español</h2>
             <p class="language-description">Spanish</p>
@@ -91,6 +153,7 @@
             <h3 class="hash-label">SHA256</h3>
             <p class="hash-code">015B50172DED8DC0C8C4EE198AE05C46AA4795716C001C498EC5483287896801</p>
         </div>
+
         <div class="card">
             <h2 class="language-name">français</h2>
             <p class="language-description">French</p>
@@ -98,6 +161,7 @@
             <h3 class="hash-label">SHA256</h3>
             <p class="hash-code">265F02099D9B65BBFC890FC497C6A1015AEB6ECE2C891D6644A00571AF5AB5EE</p>
         </div>
+
         <div class="card">
             <h2 class="language-name">Português brasileiro</h2>
             <p class="language-description">Brazilian Portuguese</p>
@@ -115,37 +179,39 @@
         </div>
 
         <div class="card">
-            <h2 class="language-name">한국어</h2>
-            <p class="language-description">Korean</p>
+            <h2 class="language-name">עברית</h2>
+            <p class="language-description">Hebrew</p>
             <a href="https://streamable.com/q8qgvq">Download 64-bit</a>
             <h3 class="hash-label">SHA256</h3>
-            <p class="hash-code">9A6B8D1C0E9F3C6D4B3A5E7F8C0D9A0B1F6E8D4C3A0B5F1C6D9E0A2B3F4C7D8E</p>
+            <p class="hash-code">9I0J1K2L3M4N5O6P7Q8R9S0T1U2V3W4X5Y6Z7A8B9C0D1E2F3G4H5I6J7K8L9M</p>
         </div>
 
-        <div class="card">
-            <h2 class="language-name">Русский</h2>
-            <p class="language-description">Russian</p>
-            <a href="https://streamable.com/q8qgvq">Download 64-bit</a>
-            <h3 class="hash-label">SHA256</h3>
-            <p class="hash-code">3C1B2A4E6F8D9E0F7A5C9D8B2E3A4F6C7D8E9B0A5F1C6D2B3E4F7A8C9D0E1F2</p>
-        </div>
-
-        <div class="card">
-            <h2 class="language-name">한국어</h2>
-            <p class="language-description">Korean</p>
-            <a href="https://streamable.com/q8qgvq">Download 64-bit</a>
-            <h3 class="hash-label">SHA256</h3>
-            <p class="hash-code">D4F7C3A0E1B6A9D8E5F2C0B3D7E8A1F6C9B0E3D4A5F1C2E8D7B9C0A3E4F6D1B2</p>
-        </div>
-
-        <div class="card">
-            <h2 class="language-name">Svenska</h2>
-            <p class="language-description">Swedish</p>
-            <a href="https://streamable.com/q8qgvq">Download 64-bit</a>
-            <h3 class="hash-label">SHA256</h3>
-            <p class="hash-code">A5B6C7D8E9F0A1B2C3D4E5F6G7H8I9J0K1L2M3N4O5P6Q7R8S9T0U1V2W3X4Y5</p>
-        </div>
     </section>
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Contact Us</h3>
+                <p>Email: <a href="mailto:support@ultratextedit.com">support@ultratextedit.com</a></p>
+                <p>Phone: +1-800-123-4567</p>
+            </div>
+            <div class="footer-section">
+                <h3>Follow Us</h3>
+                <a href="https://www.facebook.com/UltraTextEdit" target="_blank">Facebook</a> |
+                <a href="https://twitter.com/UltraTextEdit" target="_blank">Twitter</a> |
+                <a href="https://www.instagram.com/UltraTextEdit" target="_blank">Instagram</a>
+            </div>
+            <div class="footer-section">
+                <h3>Links</h3>
+                <a href="#">Privacy Policy</a> |
+                <a href="#">Terms of Service</a> |
+                <a href="#">FAQ</a>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Ultra Text Edit. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
