project5 footer and org web link update

--- a/project5/ultra-text.html
+++ b/project5/ultra-text.html
@@ -205,10 +205,13 @@
                 <h3>Links</h3>
                 <a href="#">Privacy Policy</a> |
                 <a href="#">Terms of Service</a> |
-                <a href="#">FAQ</a>
+                <a href="#">FAQ</a> |
+                <a href="https://www.ultraedit.com/downloads/ultraedit-download-thank-you/"><strong>Orignal
+                        Page</strong></a>
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2024 Ultra Text Edit. All rights reserved.</p>
+                <p>&copy; By the way, It is The copy of Orignal Site.</p>
             </div>
         </div>
     </footer>
