--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     is a tease and every click is a thrill. 😏🍑 Let the games begin!</p>
             </a>
 
-            <a href="project5/ultra-text.html" class="project-card">
+            <a href="Projects/project5/ultra-text.html" class="project-card">
                 <h3>5. UltraEdit Thank You Page Clone</h3>
                 <p>🎉 Feeling thankful? Step into this stylish clone of the UltraEdit thank you page! Experience a
                     sleek design that mirrors the original's thank-you vibes with a touch of playful flair. Explore
