--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <p>🎉 Feeling thankful? Step into this stylish clone of the UltraEdit thank you page! Experience a
                     sleek design that mirrors the original's thank-you vibes with a touch of playful flair. Explore
                     vibrant visuals, handy download links, and a delightful layout that makes saying 'thanks' look
-                    so good. Click through and enjoy the ride! 😄🚀</p>
+                    so good. Click through and enjoy the ride!! 😄🚀</p>
             </a>
 
 
