coding2go clone project7

--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@
                     leveling up. 🎮👨‍💻 Start your coding adventure now and become the tech wizard you’ve always wanted
                     to be! 🚀🌟</p>
             </a>
+            <a href="Projects/project7/index.html" class="project-card">
+                <h3>7. Coding2Go Clone</h3>
+                <p>💻🚀 Take your coding skills to the next level with our Coding2Go clone! Explore a sleek, interactive
+                    platform that brings the best features of Coding2Go to your fingertips. Whether you’re diving into
+                    coding challenges or exploring new tutorials, this clone delivers a top-notch experience with a
+                    touch of flair. Get coding and see what you can achieve! 🌟✨</p>
+            </a>
+
 
 
 
