--- a/Projects/project7/index.html
+++ b/Projects/project7/index.html
@@ -101,10 +101,8 @@
             <div class="cont-box">
                 <h3>Build a Responsive Sidebar Menu with Animated Dropdowns</h3>
                 <p class="mar-10">This HTML, CSS and JavaScript Project is a collapsible and animated sidebar that uses
-                    modern
-                    icons,
-                    css grid and smooth transitions. It is the optimal sidebar for your dashboard application.
-                </p>
+                    modern icons, css grid and smooth transitions. It is the optimal sidebar for your dashboard
+                    application.</p>
                 <div class="btn-box mar">
                     <button class="btn-norm btn-blue"><a href="projects/sidebar-menu.zip">Download Code</a></button>
                     <button class="btn-norm btn-blue"><a href="https://youtu.be/R7b3OlEyqug">YouTube
@@ -115,28 +113,21 @@
             </div>
         </div>
 
-
-        <div class="containor mar-10 ">
+        <div class="containor mar-10">
             <img class="img-bor" src="assets/images/th-socials-hover.png" alt="">
             <div class="cont-box">
                 <h3>Animated Social Media Icons with HTML & CSS</h3>
                 <p class="mar-10">This is the perfect addition to your website. Link all your socials at the bottom of
-                    your website to
-                    build a great following.</p>
+                    your website to build a great following.</p>
                 <div class="btn-box mar">
-
                     <button class="btn-norm btn-blue"><a href="projects/socials-hover.zip">Download Code</a></button>
                     <button class="btn-norm btn-blue"><a href="https://youtu.be/UQKWc2r_41U">YouTube
                             Tutorial</a></button>
                     <button class="btn-norm btn-blue"><a href="https://www.coding2go.com/socials-hover">Visit
                             Page</a></button>
-
                 </div>
             </div>
         </div>
-
-
-
 
         <div class="containor mar-10">
             <img src="assets/images/th-responsive-grid.png" alt="" class="img-bor">
@@ -145,18 +136,14 @@
                 <p class="mar-10">Learn how to adjust the amount of columns in a css grid layout to respond to different
                     screen sizes using the repeat() and minmax() functions in css.</p>
                 <div class="btn-box mar">
-                    <button class="btn-norm btn-blue"><a href="projects/socials-hover.zip">Download Code</a></button>
-                    <button class="btn-norm btn-blue"><a href="https://youtu.be/UQKWc2r_41U">YouTube
+                    <button class="btn-norm btn-blue"><a href="projects/responsive-grid.zip">Download Code</a></button>
+                    <button class="btn-norm btn-blue"><a href="https://youtu.be/different-video">YouTube
                             Tutorial</a></button>
-                    <button class="btn-norm btn-blue"><a href="https://www.coding2go.com/socials-hover">Visit
+                    <button class="btn-norm btn-blue"><a href="https://www.coding2go.com/responsive-grid">Visit
                             Page</a></button>
-
                 </div>
             </div>
         </div>
-
-
-
 
         <div class="containor mar-10">
             <img src="assets/images/th-darkmode.png" alt="" class="img-bor">
@@ -166,18 +153,14 @@
                     website. The website will also remember the theme so that the stored theme will be used when the
                     user refreshes or returns to the website after a few days.</p>
                 <div class="btn-box mar">
-                    <button class="btn-norm btn-blue"><a href="projects/socials-hover.zip">Download Code</a></button>
-                    <button class="btn-norm btn-blue"><a href="https://youtu.be/UQKWc2r_41U">YouTube
+                    <button class="btn-norm btn-blue"><a href="projects/darkmode-switch.zip">Download Code</a></button>
+                    <button class="btn-norm btn-blue"><a href="https://youtu.be/darkmode-video">YouTube
                             Tutorial</a></button>
-                    <button class="btn-norm btn-blue"><a href="https://www.coding2go.com/socials-hover">Visit
+                    <button class="btn-norm btn-blue"><a href="https://www.coding2go.com/darkmode-switch">Visit
                             Page</a></button>
-
                 </div>
             </div>
         </div>
-
-
-
 
         <div class="containor mar-10">
             <img src="assets/images/th-border-animations.png" alt="" class="img-bor">
@@ -187,18 +170,15 @@
                     and pseudo-elements. You can customize your animation with different, colors, thickness or glowing
                     effect.</p>
                 <div class="btn-box mar">
-                    <button class="btn-norm btn-blue"><a href="projects/socials-hover.zip">Download Code</a></button>
-                    <button class="btn-norm btn-blue"><a href="https://youtu.be/UQKWc2r_41U">YouTube
+                    <button class="btn-norm btn-blue"><a href="projects/border-animations.zip">Download
+                            Code</a></button>
+                    <button class="btn-norm btn-blue"><a href="https://youtu.be/border-animations">YouTube
                             Tutorial</a></button>
-                    <button class="btn-norm btn-blue"><a href="https://www.coding2go.com/socials-hover">Visit
+                    <button class="btn-norm btn-blue"><a href="https://www.coding2go.com/border-animations">Visit
                             Page</a></button>
-
                 </div>
             </div>
         </div>
-
-
-
 
         <div class="containor mar-10">
             <img src="assets/images/th-login.png" alt="" class="img-bor">
@@ -207,18 +187,14 @@
                 <p class="mar-10">Develop a responsive login and signup form with a working form validation on the
                     front-end that checks if form data was entered properly.</p>
                 <div class="btn-box mar">
-                    <button class="btn-norm btn-blue"><a href="projects/socials-hover.zip">Download Code</a></button>
-                    <button class="btn-norm btn-blue"><a href="https://youtu.be/UQKWc2r_41U">YouTube
+                    <button class="btn-norm btn-blue"><a href="projects/login-signup.zip">Download Code</a></button>
+                    <button class="btn-norm btn-blue"><a href="https://youtu.be/login-signup">YouTube
                             Tutorial</a></button>
-                    <button class="btn-norm btn-blue"><a href="https://www.coding2go.com/socials-hover">Visit
+                    <button class="btn-norm btn-blue"><a href="https://www.coding2go.com/login-signup">Visit
                             Page</a></button>
-
                 </div>
             </div>
         </div>
-
-
-
 
         <div class="containor mar-10">
             <img src="assets/images/th-10-tricks.png" alt="" class="img-bor">
@@ -228,18 +204,14 @@
                     video if you want to play around with them a bit. Each tip has its own html file, where the css code
                     is included using internal css. Have fun ;)</p>
                 <div class="btn-box mar">
-                    <button class="btn-norm btn-blue"><a href="projects/socials-hover.zip">Download Code</a></button>
-                    <button class="btn-norm btn-blue"><a href="https://youtu.be/UQKWc2r_41U">YouTube
+                    <button class="btn-norm btn-blue"><a href="projects/css-pro-tips.zip">Download Code</a></button>
+                    <button class="btn-norm btn-blue"><a href="https://youtu.be/css-tips-video">YouTube
                             Tutorial</a></button>
-                    <button class="btn-norm btn-blue"><a href="https://www.coding2go.com/socials-hover">Visit
+                    <button class="btn-norm btn-blue"><a href="https://www.coding2go.com/css-pro-tips">Visit
                             Page</a></button>
-
                 </div>
             </div>
         </div>
-
-
-
 
         <div class="containor mar-10">
             <img src="assets/images/th-todoapplication.png" alt="" class="img-bor">
@@ -248,52 +220,42 @@
                 <p class="mar-10">Develop a responsive todo application using HTML, CSS, JS that stores data in the
                     localStorage & deploy the project with Hostinger.</p>
                 <div class="btn-box mar-10">
-                    <button class="btn-norm btn-blue"><a href="projects/socials-hover.zip">Download Code</a></button>
-                    <button class="btn-norm btn-blue"><a href="https://youtu.be/UQKWc2r_41U">YouTube
+                    <button class="btn-norm btn-blue"><a href="projects/todo-app.zip">Download Code</a></button>
+                    <button class="btn-norm btn-blue"><a href="https://youtu.be/todo-app-video">YouTube
                             Tutorial</a></button>
-                    <button class="btn-norm btn-blue"><a href="https://www.coding2go.com/socials-hover">Visit
+                    <button class="btn-norm btn-blue"><a href="https://www.coding2go.com/todo-app">Visit
                             Page</a></button>
-
                 </div>
             </div>
         </div>
-
-
-
 
         <div class="containor mar-10">
             <img src="assets/images/th-navbar.jpg" alt="" class="img-bor">
             <div class="cont-box">
-                <h3>Responsive Navigation Bar with hamburger menu</h3>
+                <h3>Responsive Navigation Bar with Hamburger Menu</h3>
                 <p class="mar-10">Create a responsive navbar with a modern sidebar that opens and closes using icon
                     buttons (HTML, CSS, JavaScript).</p>
                 <div class="btn-box mar-10">
-                    <button class="btn-norm btn-blue"><a href="projects/socials-hover.zip">Download Code</a></button>
-                    <button class="btn-norm btn-blue"><a href="https://youtu.be/UQKWc2r_41U">YouTube
+                    <button class="btn-norm btn-blue"><a href="projects/navbar.zip">Download Code</a></button>
+                    <button class="btn-norm btn-blue"><a href="https://youtu.be/navbar-video">YouTube
                             Tutorial</a></button>
-                    <button class="btn-norm btn-blue"><a href="https://www.coding2go.com/socials-hover">Visit
-                            Page</a></button>
-
+                    <button class="btn-norm btn-blue"><a href="https://www.coding2go.com/navbar">Visit Page</a></button>
                 </div>
             </div>
         </div>
 
-
-
-
         <div class="containor mar-10">
             <img src="assets/images/th-animated-navbar (1).png" alt="" class="img-bor">
             <div class="cont-box">
-                <h3>Responsive Navbar with sidebar animation</h3>
-                <p class="mar-10">This responsive & animated navbar has a slide in transition and will close when the
-                    user clicks outside of it (css only).</p>
+                <h3>Responsive Navbar with Sidebar Animation</h3>
+                <p class="mar-10">This responsive & animated navbar has a slide-in transition and will close when the
+                    user clicks outside of it (CSS only).</p>
                 <div class="btn-box mar-10">
-                    <button class="btn-norm btn-blue"><a href="projects/socials-hover.zip">Download Code</a></button>
-                    <button class="btn-norm btn-blue"><a href="https://youtu.be/UQKWc2r_41U">YouTube
+                    <button class="btn-norm btn-blue"><a href="projects/animated-navbar.zip">Download Code</a></button>
+                    <button class="btn-norm btn-blue"><a href="https://youtu.be/animated-navbar">YouTube
                             Tutorial</a></button>
-                    <button class="btn-norm btn-blue"><a href="https://www.coding2go.com/socials-hover">Visit
+                    <button class="btn-norm btn-blue"><a href="https://www.coding2go.com/animated-navbar">Visit
                             Page</a></button>
-
                 </div>
             </div>
         </div>
