--- a/Projects/project7/index.html
+++ b/Projects/project7/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding2go</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="">
+    <link rel="icon" href="https://www.coding2go.com/images/favicon.png">
 </head>
 
 <body>
